sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:6: error: identifier expected but 'var' found.
def var change=false;
    ^