sort.basic.bubble.AlgBubbleSort1.scala.code


def bubbleSort()  {
 
def var change=false;

do {
  
change=true;  

for (i<-0 to lgr-2) {
change=true;
  for(j<-0 to lgr-2) {
  	if (plusPetit(j,j+1)=true) {
  		echange(j,j+1);
  		change=true;
    }
  }
}
  
  
  
  
  
  
  
} while (change=true)
}